[gd_scene load_steps=34 format=2]

[ext_resource path="res://Sprites/Characters/Character-Placeholder.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Placeholder-8x32.png" type="Texture" id=2]
[ext_resource path="res://Entities/Player.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.0
height = 16.0

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "AttackMelee"

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "IdleUp"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "IdleRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=8]
blend_point_0/node = SubResource( 4 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 5 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 6 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 7 )
blend_point_3/pos = Vector2( 1, 0 )
snap = Vector2( 0.1, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "WalkDown"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "WalkRight"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "WalkUp"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "WalkLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id=13]
blend_point_0/node = SubResource( 9 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 10 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 11 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 12 )
blend_point_3/pos = Vector2( -1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachine" id=18]
states/AttackMelee/node = SubResource( 3 )
states/AttackMelee/position = Vector2( 813, 306 )
states/Idle/node = SubResource( 8 )
states/Idle/position = Vector2( 320, 295 )
states/Walk/node = SubResource( 13 )
states/Walk/position = Vector2( 326, 474 )
transitions = [ "Idle", "AttackMelee", SubResource( 14 ), "AttackMelee", "Idle", SubResource( 15 ), "Walk", "Idle", SubResource( 16 ), "Idle", "Walk", SubResource( 17 ) ]
start_node = "Idle"
graph_offset = Vector2( -309.33, 220.339 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=19]

[sub_resource type="Animation" id=20]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("RotationHelper/Sword/SwordSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RotationHelper/Sword/HitBox/HitMask:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RotationHelper/Sword:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -45.0, 45.0 ]
}

[sub_resource type="Animation" id=21]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=22]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=23]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=24]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=25]
resource_name = "WalkDown"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=26]
resource_name = "WalkLeft"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=27]
resource_name = "WalkRight"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=28]
resource_name = "WalkUp"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="CapsuleShape2D" id=29]
radius = 12.0
height = 16.0

[sub_resource type="SegmentShape2D" id=30]
a = Vector2( 16, 0 )
b = Vector2( 64, 0 )

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 16, 2 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 524288
collision_mask = 524288
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -20 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
vframes = 4
hframes = 4
frame = 4

[node name="CollisionMask" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 18 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 19 )
parameters/Idle/blend_position = Vector2( 1.03997, -0.00467288 )
parameters/Walk/blend_position = Vector2( 1.14912, -0.0607476 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AttackMelee = SubResource( 20 )
anims/IdleDown = SubResource( 21 )
anims/IdleLeft = SubResource( 22 )
anims/IdleRight = SubResource( 23 )
anims/IdleUp = SubResource( 24 )
anims/WalkDown = SubResource( 25 )
anims/WalkLeft = SubResource( 26 )
anims/WalkRight = SubResource( 27 )
anims/WalkUp = SubResource( 28 )

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2( 0, -16 )
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, -2 )
shape = SubResource( 29 )

[node name="RotationHelper" type="Node2D" parent="."]
position = Vector2( 0, -16 )

[node name="InteractionBox" type="Area2D" parent="RotationHelper"]
collision_layer = 16
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="RotationHelper/InteractionBox"]
shape = SubResource( 30 )

[node name="Sword" type="Node2D" parent="RotationHelper"]
rotation = -0.785398

[node name="SwordSprite" type="Sprite" parent="RotationHelper/Sword"]
visible = false
position = Vector2( 16, 0 )
texture = ExtResource( 2 )
offset = Vector2( 16, 0 )

[node name="HitBox" type="Area2D" parent="RotationHelper/Sword"]
collision_mask = 8

[node name="HitMask" type="CollisionShape2D" parent="RotationHelper/Sword/HitBox"]
position = Vector2( 32, 0 )
shape = SubResource( 31 )
[connection signal="body_entered" from="RotationHelper/InteractionBox" to="." method="_on_InteractionBox_body_entered"]
[connection signal="body_exited" from="RotationHelper/InteractionBox" to="." method="_on_InteractionBox_body_exited"]
